--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-image: linear-gradient(to right, rgb(195, 39, 203) , rgb(33, 100, 199));
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.to-do-List{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 100px;
+}
+
+h1{
+    font-size: 4rem;
+    color: rgb(255, 255, 255);
+}
+
+button{
+    font-size: 1.7rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color -0.5s ease;
+}
+.add-button{
+    background-color: hsl(125, 43%, 36%);
+}
+.add-button:hover{
+    background-color: hsl(125, 48%, 28%);
+}
+.delete-button{
+    background-color: hsl(10, 90%, 50%);
+}
+.delete-button:hover{
+    background-color: hsl(10, 90%, 40%);
+}
+.move-button{
+    background-color: hsl(208, 46%, 39%);
+}
+.move-button:hover{
+    background-color: hsl(207, 65%, 15%);
+}
+.edit-button{
+    background-color: hsl(225, 100%, 54%);
+    padding: 7px;
+    margin-left: 10px;
+}
+.edit-button:hover{
+    background-color: hsl(206, 73%, 19%);
+}
+.save-button{
+    background-color: hsl(126, 91%, 30%);
+    padding: 7px;
+    margin-left: 10px;
+}
+.save-button:hover{
+    background-color: hsl(117, 55%, 23%);
+}
+
+input[type='text']{
+    font-size : 1.6rem;
+    padding: 10px;
+    border: 2px solid hsla(0, 0%, 80%, 0.5);
+    border-radius: 5px;
+    color: hsla(0, 0%, 0%, 0.5);
+}
+
+ol{
+    padding: 0;
+}
+
+li{
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 5px;
+    width: 70%;
+    margin-left: 12%;
+    background-color: hsl(0, 0%, 97%);
+    margin-bottom: 10px;
+    border: 3px solid hsla(0,0%, 85%, 0.75);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+.text{
+    flex: 1;
+
+}
+.delete-button, .move-button{
+    padding: 8px 12px;
+    font-size: 1.4rem;
+    margin-left: 10px;
 }
